[package]
name = "pixdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fronma = { version = "0.2.0", features = ["toml"] }
itertools = "0.13.0"
micro_png = "0.3.5"
num-rational = "0.4.2"
regex = "1.10.6"
serde = { version = "1.0.203", features = ["derive"] }
